# kdeconnect-kde

./: CMakeLists.txt  org.kde.kdeconnect.kcm.appdata.xml
app/: org.kde.kdeconnect.app.desktop
core/: .CMakeLists.txt.kate-swp  CMakeLists.txt  core_debug.h  daemon.cpp  device.cpp  pluginloader.cpp  qasconst.h
core/backends/: devicelink.h
core/backends/bluetooth/: bluetoothdevicelink.h
daemon/: CMakeLists.txt  kdeconnect.desktop  kdeconnectd.cpp  kdeconnectd.desktop.cmake
fileitemactionplugin/: kdeconnectsendfile.desktop
indicator/: deviceindicator.cpp  org.kde.kdeconnect.nonplasma.desktop
interfaces/: CMakeLists.txt  notificationsmodel.cpp  notificationsmodel.h
kcm/: kcm_kdeconnect.desktop  org.kde.kdeconnect.kcm.desktop
plasmoid/declarativeplugin/: kdeconnectdeclarativeplugin.cpp  kdeconnectdeclarativeplugin.h  responsewaiter.cpp
plasmoid/package/: metadata.desktop
plugins/: CMakeLists.txt  kdeconnect.notifyrc  kdeconnect_plugin.desktop
plugins/battery/: .batteryplugin.cpp.kate-swp  CMakeLists.txt  batteryplugin.cpp  kdeconnect_battery.json
plugins/clipboard/: kdeconnect_clipboard.json
plugins/findmyphone/: kdeconnect_findmyphone.json
plugins/lockdevice/: kdeconnect_lockdevice.json
plugins/mousepad/: kdeconnect_mousepad.json
plugins/mousepad_windows/: kdeconnect_mousepad.json
plugins/mpriscontrol/: kdeconnect_mpriscontrol.json
plugins/mprisremote/: kdeconnect_mprisremote.json
plugins/notifications/: kdeconnect_notifications.json  notificationsdbusinterface.cpp
plugins/pausemusic/: kdeconnect_pausemusic.json  kdeconnect_pausemusic_config.desktop  pausemusicplugin.cpp
plugins/ping/: CMakeLists.txt  kdeconnect_ping.json  pingplugin.cpp
plugins/remotecommands/: kdeconnect_remotecommands.json
plugins/remotecontrol/: kdeconnect_remotecontrol.json
plugins/remotekeyboard/: kdeconnect_remotekeyboard.json
plugins/runcommand/: kdeconnect_runcommand.json  kdeconnect_runcommand_config.desktop
plugins/screensaver-inhibit/: kdeconnect_screensaver_inhibit.json
plugins/sendnotifications/: CMakeLists.txt  kdeconnect_sendnotifications.json  kdeconnect_sendnotifications.json.in  kdeconnect_sendnotifications_config.desktop  kdeconnect_sendnotifications_sfos.json  notificationslistener.cpp  sendnotificationsplugin.cpp
plugins/sftp/: kdeconnect_sftp.json
plugins/share/: kdeconnect_share.json  kdeconnect_share_config.desktop
plugins/sync/: syncplugin.cpp
plugins/telephony/: kdeconnect_telephony.json
rpm/: kdeconnect-sfos.spec
sfos/: .CMakeLists.txt.kate-swp  CMakeLists.txt  kdeconnect-sfos.cpp  kdeconnect-sfos.desktop  sailfishdaemon.cpp  sailfishdaemon.h  sailfishdaemon.h_parameters
sfos/qml/cover/: CoverPage.qml
sfos/qml/pages/: DevicePage.qml  FindDevices.qml  FirstPage.qml  PluginItem.qml
sfos/rpm/: kdeconnect-sfos.spec
urlhandler/: org.kde.kdeconnect.telhandler.desktop
